--- a/views/applicant/main.html
+++ b/views/applicant/main.html
@@ -28,6 +28,7 @@
                             <% } %>
                                 <li><a href="/common/logout">退出</a></li>
                                 <li><a href="/company/require" id="resume">简历</a></li>
+                                <li><a href="/applicant/personal" id='personal'>个人中心</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
