--- a/views/applicant/resume.html
+++ b/views/applicant/resume.html
@@ -89,7 +89,7 @@
                         <li class="salary cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">期望薪资</span>
-                            <select name="salaryExpecation" id="" value="期望薪资" class="select">
+                            <select name="salaryExpecation" id="sal" value="期望薪资" class="select">
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>面议</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>1000元以下</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>1000-2000元</a></option>
