--- a/views/common/login.html
+++ b/views/common/login.html
@@ -42,7 +42,7 @@
 
                 } else if (!data.success) {
                     console.log(1)
-                    $('.alert').css(
+                    $('.error').css(
                         'display', 'inline-block'
                     )
 
