--- a/public/css/company/comDetail.css
+++ b/public/css/company/comDetail.css
@@ -176,3 +176,9 @@
 .community .c-content {
     margin-left: -9px;
 }
+
+.tel {
+    display: none;
+    font-size: 30px;
+    margin: 5px 0px 10px 0px;
+}
