--- a/views/applicant/resume.html
+++ b/views/applicant/resume.html
@@ -70,7 +70,7 @@
                             <b class="must-Symbol">*</b>
                             <span class="com-title">出生年份</span>
                             <div class="com-select selects clear">
-                                <input type="text" data-required data-description='dateBir' data-describedby='dateBirInfo' class="dateBir" name="dateOfBirth" value="2017-04-15" data-date-language='zh-CN' data-provide='datepicker' data-date-end-date='0d' data-date-format='yyyy-mm-dd'>
+                                <input type="text" data-required data-description='dateBir' data-describedby='dateBirInfo' class="dateBir" name="dateOfBirth" value="" data-date-language='zh-CN' data-provide='datepicker' data-date-end-date='0d' data-date-format='yyyy-mm-dd'>
                             </div>
                             <div id="dateBirInfo" class="ErrorInfo"></div>
                         </li>
@@ -160,6 +160,11 @@
     <script src="/public/assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
     <script src="/public/assets/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js"></script>
     <script src="/public/js/resume.js"></script>
+    <script type="text/javascript">
+        $(function() {
+
+        });
+    </script>
 </body>
 
 </html>
