--- a/views/common/login.html
+++ b/views/common/login.html
@@ -18,6 +18,7 @@
             <input type="password" name="password" class="form-control" placeholder="密码" required>
             <span class="error">账号或密码错误</span>
             <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit"><a href='/common/register' style='color:white'>注册</a></button>
         </form>
     </div>
     <script src="/node_modules/jquery/dist/jquery.js"></script>
